feat: inserido tdd nos controllers e ajustado prettier
