# server/src/models/Category.js
@@ -1,15 +1,18 @@
-import mongoose from 'mongoose';
+import mongoose from "mongoose";
 
-const CategorySchema = new mongoose.Schema({
+const CategorySchema = new mongoose.Schema(
+  {
     name: {
-        type: String, //exemplo: Alimentação, Transporte, Saúde, Streaming, Outros
-        required: true
+      type: String, //exemplo: Alimentação, Transporte, Saúde, Streaming, Outros
+      required: true,
     },
     userId: {
-        type: String, 
-        ref: 'User',
-        required: true
-    }
-}, { timestamps: true });
+      type: String,
+      ref: "User",
+      required: true,
+    },
+  },
+  { timestamps: true }
+);
 
-export default mongoose.model('Category', CategorySchema);
+export default mongoose.model("Category", CategorySchema);
