# server/src/server.js
@@ -1,10 +1,10 @@
-import 'dotenv/config';
-import express from 'express';
-import cors from 'cors';
-import dbConnect from './config/db.js';
-import billsRoutes from './routes/billsRoutes.js';
-import categoryRoutes from './routes/categoryRoutes.js';
-import setupSwagger from './config/swaggerConfig.js';
+import "dotenv/config";
+import express from "express";
+import cors from "cors";
+import dbConnect from "./config/db.js";
+import billsRoutes from "./routes/billsRoutes.js";
+import categoryRoutes from "./routes/categoryRoutes.js";
+import setupSwagger from "./config/swaggerConfig.js";
 
 const app = express();
 app.use(express.json());
@@ -14,11 +14,11 @@ dbConnect();
 
 setupSwagger(app);
 
-app.use('/api/bills', billsRoutes);
-app.use('/api/category', categoryRoutes);
+app.use("/api/bills", billsRoutes);
+app.use("/api/category", categoryRoutes);
 
-app.get('/', (req, res) => {
-    res.send('API is running...');
+app.get("/", (req, res) => {
+  res.send("API is running...");
 });
 
 const PORT = process.env.PORT || 5000;
